--- a/src/main/resources/templates/justificativa/justificativaResposta.html
+++ b/src/main/resources/templates/justificativa/justificativaResposta.html
@@ -123,10 +123,10 @@
     
     <div class="mb-3 dv">
         <label >Justifique-se</label>
-        <textarea class="form-control"  style="height: 100px" name="texto" maxlength="250"></textarea>
+        <textarea class="form-control"  style="height: 100px" name="texto" maxlength="250" required></textarea>
         
     </div>
-    
+
     <div class="mb-3 dv">
         <button class="btn btn-primary" type="submit">Cadastrar</button>
     </div>
