--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -105,7 +105,6 @@
 	  </nav>
 	  
 	  			<div class="resultadoP">
-			  
 				  	<div class="resultado-item">
 				  		<p class="item-ok"> &ensp; Ok</p>	
 				  	</div>
@@ -130,7 +129,7 @@
 				<th class="th-height">Curso</th>
 				<th class="th-height">Turma</th>
 				<th class="th-height">Data Vencimento</th>
-				<th class="th-height">Jusitificativa</th>
+				<th class="th-height" th:if="${session.docenciaLogado} or ${session.diretoriaLogado}">Pendências</th>
 				<th class="th-height">Respostas</th>
 				<th class="th-height"></th>
 			</tr>
@@ -143,7 +142,8 @@
 				<td th:text="${ps.curso?.descCurso}"/>
 				<td th:text="${ps.turma}"/>
 				<td th:text="${#dates.format(ps.dataVencimento, 'dd/MM/yyyy')}" th:style="${ps.dataVencimento.after(#dates.createNow())} ? 'color: black' : 'color: #c32f27'" ></td>
-				<td id="italico" th:text="${ps.justificativa ? 'Justificativa pendente, acesse a lista de respostas para responder' : 'Nenhuma pendência'}"/>
+				<td th:if="${session.docenciaLogado}" id="italico" th:text="${ps.justificativa ? 'Justificativa pendente, verifique as respostas' : 'Nenhuma pendência'}"/>
+				<td th:if="${session.diretoriaLogado}" th:text="${ps.justificativa ? 'Contém justificativas solicitadas' : 'Nenhuma pendência'}" style="font-style: italic;"/>
 				<td><a th:if="${ps.listaResposta.size() > 0}" th:text="${ps.listaResposta.size() > 0 ? 'Lista de Respostas' : 'NN'}" type="button" class="btn btn-outline-dark" th:href="@{/pesquisa/listarResposta(id=${ps.id})}" style=" text-decoration: none">Lista de Resposta</a></td>
 					<td th:style="${ps.justificativa} ? 'background-color: #d55d92' : 'background-color: #3745a4'" />
 
