--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
+	<link rel="stylesheet" href="../../css/note-response.css" />
 
 	<!-- CSS only -->
 
@@ -98,18 +99,18 @@
 		</ul>
 	</div>
 	<div class="container main-div">
-		<h2 class="titleh2">Cadastro de Pergunta</h2>
+		<h2 class="titleh2 dv">Cadastro de Pergunta</h2>
 
 		<form method="post" style="border:2" action="novaPergunta">
 
-			<div class="alert alert-success collapse" role="alert" id="myAlert">
+			<div class="alert alert-success collapse dv" role="alert" id="myAlert">
 				<button class="btn-close" data-bs-dismiss="alert"></button>
 				<h4 class="alert-heading">Pergunta cadastrada com sucesso!</h4>
 			</div>
 
 			<input type="hidden" name="id" th:value="${p?.id}"></input>
 			<p>
-			<div class="mb-3">
+			<div class="mb-3 dv">
 				<label class="lb-legend">Nova Pergunta</label>
 				<input type="text" class="form-control ipt-pergunta"
 					name="textoPergunta" th:value="${p?.textoPergunta}"
@@ -120,7 +121,7 @@
 
 		
 			
-				<div class="mb-3">
+				<div class="mb-3 dv">
 					<label class="lb-legend">Atrelar a uma Pesquisa? (opcional) </label>
 					<select
 					  name="perguntaExclusao"
@@ -135,7 +136,7 @@
 				
 			 
 
-			<div class="d-grid gap-2" >
+			<div class="d-grid gap-2 dv" >
 			<div style="text-align:center!important;">
 				<button type="submit" class="btn btn-outline-primary" style="width: 120px" >Cadastrar</button>
 			</div>
