--- a/src/main/resources/templates/curso/curso.html
+++ b/src/main/resources/templates/curso/curso.html
@@ -108,6 +108,7 @@
 		  <input type="hidden" name="id" th:value="${cs?.id}" />
 		  <div class="mb-3 dv">
 			<h4>Cadastro de Cursos</h4>
+			<p></p>
 			<input
 			  type="text"
 			  name="descCurso"
@@ -134,8 +135,9 @@
 			  ></option>
 			</select>
 		  </div>
-  
-		  <button type="submit" class="btn btn-primary">Salvar</button>
+		  <div class="mb-3 dv">
+			<button type="submit" class="btn btn-outline-primary">Cadastrar</button>
+		  </div>
 		</form>
 	  </div>
     <!-- JavaScript Bundle with Popper -->
