--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -99,7 +99,7 @@
 		</ul>
 	</div>
 	<div class="container main-div">
-		<h2 class="titleh2 dv">Cadastro de Pergunta</h2>
+		<h4 class="titleh2 dv">Cadastro de Pergunta</h4>
 
 		<form method="post" style="border:2" action="novaPergunta">
 
@@ -122,7 +122,7 @@
 		
 			
 				<div class="mb-3 dv">
-					<label class="lb-legend">Atrelar a uma Pesquisa? (opcional) </label>
+					<label class="lb-legend">Atrelar a uma Pesquisa? (<i>opcional</i>) </label>
 					<select
 					  name="perguntaExclusao"
 					  class="select2 form-control"
@@ -137,8 +137,8 @@
 			 
 
 			<div class="d-grid gap-2 dv" >
-			<div style="text-align:center!important;">
-				<button type="submit" class="btn btn-outline-primary" style="width: 120px" >Cadastrar</button>
+			<div >
+				<button type="submit" class="btn btn-outline-primary">Cadastrar</button>
 			</div>
 			</div>
 
