--- a/src/main/resources/templates/justificativa/justificativaResposta.html
+++ b/src/main/resources/templates/justificativa/justificativaResposta.html
@@ -106,7 +106,7 @@
     <div class="alert alert-success collapse dv" role="alert" id="myAlert">
         <button class="btn-close" data-bs-dismiss="alert"></button>
         <h4 class="alert-heading">Justificativa registrada com sucesso!</h4>
-        <button class="btn btn-primary bt-return" onclick="history.go(-2)">Volte as Respostas Aqui !!</button>
+        <button class="btn btn-primary bt-return" onclick="history.go(-2)">Retorne para a lista de resposta clicando aqui!</button>
     </div>
 
     <input type="hidden" name="id"/>
