--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -130,16 +130,16 @@
 			</div>
 		  </nav>
 		  <div class="resultadoU">
-			<div class="resultado-item">
+			<div class="resultado-itemU">
 				<p class="item-ativo"> &ensp; Ativo</p>
 			</div>
 			
-			<div class="resultado-item">
+			<div class="resultado-itemU">
 				<p class="item-inativo"> &ensp; Inativo</p>	
 			</div>
 		  </div>
-		<br>
-		<br>
+		  <br>
+		
 		<table class="table">
 		<thead>
 		  <tr>
