--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -105,16 +105,16 @@
 	  </nav>
 	  
 	  			<div class="resultadoP">
-				  	<div class="resultado-item">
-				  		<p class="item-ok"> &ensp; Ok</p>	
-				  	</div>
-				  	
-				  	<div class="resultado-item">
+				  	<div class="resultado-itemP" >
+					<h6>Justificativa:&emsp;&emsp;</h6><p class="item-ok"> &ensp; Ok</p>
+					</div>
+
+					<div class="resultado-itemP" >	
 				  		<p class="item-pendente"> &ensp; Pendente</p>	
 				  	</div>	
-					
-					<div class="resultado-item">
-						<p class="item-atrasado"> &ensp; Atrasado</p>	
+					  
+					<div class="resultado-itemP">
+						<h6>Data:&emsp;&emsp;</h6><p class="item-atrasado"> &ensp; Atrasado</p>
 					</div>
 	
 			  </div>
