--- a/src/main/resources/templates/cadastro/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastro/cadastroUsuario.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
-    <link rel="stylesheet" href="../../css/note-response.css">
+    <link rel="stylesheet" href="../../css/note-response.css" />
 
     <!-- CSS only -->
 
@@ -40,8 +40,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-
-
     <title>Cadastro de Usuário</title>
 </head>
 <body>
@@ -51,7 +49,6 @@
         <div>
             <img class="Logo_kaos "src="../../img/logo-claro.png" alt="">
         </div>
-
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
             <span class="navbar-toggler-icon"></span>Menu
         </button>
@@ -72,6 +69,49 @@
                     <li th:if="${session.secretariaLogado} " class="nav-item dropdown">
                         <button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialSecretaria'"><i class="material-icons" style="color:white;">home</i></button>
                     </li>
+                    <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Usuário
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/cadastro">Cadastrar Usuário</a></li>
+                            <li><a class="dropdown-item" href="/lista/1">Listar Usuário</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Curso
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Pergunta
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a></li>
+                            <li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Pesquisa
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/pesquisa/cadastrar">Cadastrar Pesquisa</a></li>
+                            <li><a class="dropdown-item" href="/pesquisa/listar/1">Listar Pesquisa</a></li>
+                        </ul>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="/resposta/codigoPesquisa">Formulário</a>
                     </li>
@@ -174,6 +214,11 @@ $(document).ready(function () {
 });
 </script>
 
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"
+></script>
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
