--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -53,7 +53,6 @@
 		<div>
 			<img class="Logo_kaos "src="../../img/logo-claro.png" alt="">
 		</div>
-
 		<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
 			<span class="navbar-toggler-icon"></span>Menu
 		</button>
@@ -74,6 +73,49 @@
 					<li th:if="${session.secretariaLogado} " class="nav-item dropdown">
 						<button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialSecretaria'"><i class="material-icons" style="color:white;">home</i></button>
 					</li>
+					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Usuário
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="/cadastro">Cadastrar Usuário</a></li>
+							<li><a class="dropdown-item" href="/lista/1">Listar Usuário</a></li>
+						</ul>
+					</li>
+
+					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Curso
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
+						</ul>
+					</li>
+
+					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Pergunta
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a></li>
+							<li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
+						</ul>
+					</li>
+
+					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Pesquisa
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="/pesquisa/cadastrar">Cadastrar Pesquisa</a></li>
+							<li><a class="dropdown-item" href="/pesquisa/listar/1">Listar Pesquisa</a></li>
+						</ul>
+					</li>
+
 					<li class="nav-item">
 						<a class="nav-link" href="/resposta/codigoPesquisa">Formulário</a>
 					</li>
@@ -188,12 +230,17 @@ $(document).ready(function () {
 
 	<!-- imports -->
 	<!-- JavaScript Bundle with Popper -->
-	<script
+<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+		crossorigin="anonymous"
+></script>
+<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
 		crossorigin="anonymous">
 
-	</script>
+</script>
 
 </body>
 </html>
